--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,15 +2,15 @@ inherit_from:
   - .rubocop_todo.yml
 
 AllCops:
-  RunRailsCops: true # always run the rails cops
+  TargetRubyVersion: 2.2
+  TargetRailsVersion: 5.1
+
+Rails:
+  Enabled: true
 
 # Don't enforce documentation
 Style/Documentation:
   Enabled: false
-
-# Force before_filter until upgrade to Rails 4
-Rails/ActionFilter:
-  EnforcedStyle: filter
 
 # Support both ruby19 and hash_rockets
 Style/HashSyntax:
