--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,8 +6,8 @@ inherit_from:
   - .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 2.5
-  TargetRailsVersion: 5.2
+  TargetRubyVersion: '2.7'
+  TargetRailsVersion: '6.1'
 
 Rails:
   Enabled: true
